--- a/css/stylesD.css
+++ b/css/stylesD.css
@@ -93,8 +93,8 @@ p {
 
 .containerfaq {
   padding: 2em 5rem;
-  max-width: 1000px;
-  /* max-width: 90%; */
+  /* max-width: 1000px; */
+  max-width: 90%;
   margin: 0 auto;
 }
 
